--- a/client/src/app/dashboard/components/UserStats/userStats.scss
+++ b/client/src/app/dashboard/components/UserStats/userStats.scss
@@ -110,8 +110,7 @@
 @media (max-width: 700px) {
   .user-stats-container {
     width: 90vw;
-    margin-top: 7px;
-    height: 77dvh;
-    margin-bottom: 10px;
+    height: 94%;
+    margin: 1rem;
   }
 }
