--- a/client/src/app/play/components/GuestLimitGames/guestLimitGames.scss
+++ b/client/src/app/play/components/GuestLimitGames/guestLimitGames.scss
@@ -14,7 +14,7 @@
 .guess-limit-games {
   background-color: rgba(248, 90, 90, 0.982);
   border: 1px solid rgba(248, 90, 90, 0.982);
-  border-radius: 1%;
+  border-radius: 5px;
   width: 550px;
   display: flex;
   animation: guessLimitFall 1s;
@@ -40,6 +40,7 @@
       margin: 10px;
       background-color: rgb(75, 210, 255);
       border: 1px solid rgb(75, 210, 255);
+      border-radius: 5px;
       box-shadow: 0px 0px 20px 0px rgb(12, 77, 255);
       color: white;
       font-family: var(--font-varela-round);
