--- a/client/src/app/play/components/StartGame/startGame.scss
+++ b/client/src/app/play/components/StartGame/startGame.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	border-radius: 2%;
+	border-radius: 5px;
 
 	.start-game-card {
 		display: flex;
@@ -58,7 +58,6 @@
 				margin-bottom: 3px;
 				span {
 					display: flex;
-					align-items: center;
 					margin: 0px;
 					input {
 						height: 25px;
@@ -95,7 +94,7 @@
 			color: white;
 			height: 40px;
 			width: 300px;
-			border-radius: 3%;
+			border-radius: 5px;
 			margin: 5px;
 			border: 0;
 			cursor: pointer;
