--- a/client/src/app/signin/signin.scss
+++ b/client/src/app/signin/signin.scss
@@ -76,7 +76,7 @@
 			color: white;
 			height: 40px;
 			width: 300px;
-			border-radius: 3%;
+			border-radius: 5px;
 			margin-top: 10px;
 			border: 0;
 			cursor: pointer;
