--- a/client/src/app/signup/signup.scss
+++ b/client/src/app/signup/signup.scss
@@ -88,7 +88,7 @@ form {
 		color: white;
 		height: 40px;
 		width: 300px;
-		border-radius: 4%;
+		border-radius: 5px;
 		margin: 5px;
 		font-family: "Varela Round", sans-serif;
 		font-size: 1rem;
@@ -114,6 +114,7 @@ form {
 		width: 300px;
 		background-color: rgb(207, 207, 207);
 		border: 0;
+		border-radius: 5px;
 		display: flex;
 		align-items: center;
 		cursor: pointer;
